force-app/main/default/objects/ProgramEnrollment/fields/Pref_Concentration_c__c.field-meta.xml
<CustomField>
    <fullName>Pref_Concentration_c__c</fullName>
    <label>Pref_Concentration__c</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategy and Leadership</fullName>
            </value>
            <value>
                <fullName>Operations Management</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Information and Technology Management</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>