force-app/main/default/objects/ProgramEnrollment/fields/Preferred_Cohort_to_Rejoin__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Cohort_to_Rejoin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Cohort to Rejoin</label>
    <referenceTo>AcademicTerm</referenceTo>
    <relationshipLabel>Program Enrollments (Preferred Cohort)</relationshipLabel>
    <relationshipName>Preferred_Cohort_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>