force-app/main/default/objects/ProgramEnrollment/fields/Previous_PGID__c.field-meta.xml
<CustomField>
    <fullName>Previous_PGID__c</fullName>
    <label>Previous PGID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>