force-app/main/default/objects/ProgramEnrollment/fields/Primary_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Advisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Advisor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Record_Type__c</field>
            <operation>equals</operation>
            <value>Advisor</value>
        </filterItems>
        <filterItems>
            <field>Contact.Active_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Program Enrollments</relationshipLabel>
    <relationshipName>Program_Enrollments</relationshipName>
    <type>Lookup</type>
</CustomField>