force-app/main/default/objects/ProgramEnrollment/fields/Process_Round_Formula__c.field-meta.xml
<CustomField>
    <fullName>Process_Round_Formula__c</fullName>
    <label>Process Round Formula</label>
    <length>100</length>
    <type>Text</type>
</CustomField>