force-app/main/default/objects/ProgramEnrollment/fields/Registro_Declared_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Registro_Declared_Concentration__c</fullName>
    <description>Declared Concentration mapped from Registro sync</description>
    <label>Registro Declared Concentration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>