force-app/main/default/objects/ProgramEnrollment/fields/Registro_Declared_Industry_Spl__c.field-meta.xml
<CustomField>
    <fullName>Registro_Declared_Industry_Spl__c</fullName>
    <description>Declared Industry Specialization mapped from Registro sync</description>
    <label>Registro Declared Industry Spl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>