force-app/main/default/objects/ProgramEnrollment/fields/Registro_Flexi_Core_Credits__c.field-meta.xml
<CustomField>
    <fullName>Registro_Flexi_Core_Credits__c</fullName>
    <label>Registro Flexi Core Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>