force-app/main/default/objects/ProgramEnrollment/fields/Registro_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Registro_Last_Sync_Date__c</fullName>
    <description>Tracks the date and time of the last sync acknowledgement.</description>
    <label>Registro Last Sync Date</label>
    <type>DateTime</type>
</CustomField>