force-app/main/default/objects/ProgramEnrollment/fields/Registro_Last_Synced__c.field-meta.xml
<CustomField>
    <fullName>Registro_Last_Synced__c</fullName>
    <label>Registro Last Synced</label>
    <type>DateTime</type>
</CustomField>