force-app/main/default/objects/ProgramEnrollment/fields/Registro_Pref_Concentration__c.field-meta.xml
<CustomField>
    <fullName>Registro_Pref_Concentration__c</fullName>
    <description>Preferred Concentration mapped from Registro sync</description>
    <label>Registro Preferred Concentration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>