force-app/main/default/objects/ProgramEnrollment/fields/Registro_Pref_Industry_Spl__c.field-meta.xml
<CustomField>
    <fullName>Registro_Pref_Industry_Spl__c</fullName>
    <description>Preferred Industry Specialization mapped from Registro sync</description>
    <label>Registro Preferred Industry Spl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>