force-app/main/default/objects/ProgramEnrollment/fields/Registro_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Registro_Record_Id__c</fullName>
    <description>External ID from Registro for Major Area Integration.</description>
    <externalId>true</externalId>
    <label>Registro Record ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>