force-app/main/default/objects/ProgramEnrollment/fields/Registro_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Registro_Sync_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if the record was successfully synced with the external system.</description>
    <label>Registro Sync Status</label>
    <type>Checkbox</type>
</CustomField>