force-app/main/default/objects/ProgramEnrollment/fields/Reject_Reason_Cas_Experience_Details__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason_Cas_Experience_Details__c</fullName>
    <label>Reject Reason Cas ExperienceDetails</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>