force-app/main/default/objects/ProgramEnrollment/fields/Reject_Reason_Cas_Summary__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason_Cas_Summary__c</fullName>
    <label>Reject Reason Cas Summary</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>