force-app/main/default/objects/ProgramEnrollment/fields/Special_Requirements_Status__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements_Status__c</fullName>
    <description>Stores completed special requirements for graduation checks; separate values using semicolon.</description>
    <label>Special Requirements Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>