force-app/main/default/objects/ProgramEnrollment/fields/Sponsor_City__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_City__c</fullName>
    <label>Sponsor City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>