force-app/main/default/objects/ProgramEnrollment/fields/Sponsor_Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Company_Address__c</fullName>
    <label>Sponsor Company Address</label>
    <type>TextArea</type>
</CustomField>