force-app/main/default/objects/ProgramEnrollment/fields/Sponsor_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Company_Name__c</fullName>
    <label>Sponsor Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>