force-app/main/default/objects/ProgramEnrollment/fields/Sponsor_GST_Number__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_GST_Number__c</fullName>
    <label>Sponsor GST Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>