force-app/main/default/objects/ProgramEnrollment/fields/Sponsor_Pan_No__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Pan_No__c</fullName>
    <label>Sponsor Pan No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>