force-app/main/default/objects/ProgramEnrollment/fields/Sponsor_State__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_State__c</fullName>
    <label>Sponsor State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>