force-app/main/default/objects/ProgramEnrollment/fields/Sponsor_TanNo__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_TanNo__c</fullName>
    <label>Sponsor TanNo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>