force-app/main/default/objects/ProgramEnrollment/fields/Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Status__c</fullName>
    <label>Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Student</fullName>
                <label>Current Student</label>
            </value>
            <value>
                <fullName>Pre-Term Under Evaluation</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>Fee payment</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Return and Replace</fullName>
            </value>
            <value>
                <fullName>Incoming Exchange</fullName>
            </value>
            <value>
                <fullName>Outgoing Exchange</fullName>
            </value>
            <value>
                <fullName>Assesment failure</fullName>
            </value>
            <value>
                <fullName>Non compliance</fullName>
            </value>
            <value>
                <fullName>Academic Difficulty</fullName>
            </value>
            <value>
                <fullName>Medical Reasons</fullName>
            </value>
            <value>
                <fullName>Financial Reasons</fullName>
            </value>
            <value>
                <fullName>Policy Voilation/ Legal Issues</fullName>
            </value>
            <value>
                <fullName>Certificate Issued</fullName>
            </value>
            <value>
                <fullName>Certificate Pending</fullName>
            </value>
            <value>
                <fullName>Certificate Re-Issued</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Not Graduating</fullName>
            </value>
            <value>
                <fullName>Legal Issues</fullName>
            </value>
            <value>
                <fullName>Policy Voilation</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Not Graduated</fullName>
            </value>
            <value>
                <fullName>Active Alumni</fullName>
            </value>
            <value>
                <fullName>Inactive Alumni</fullName>
            </value>
            <value>
                <fullName>Deferral Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>