force-app/main/default/objects/ProgramEnrollment/fields/Sub_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Sub_Sub_Status__c</fullName>
    <label>Sub Sub Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attendance Audit</fullName>
            </value>
            <value>
                <fullName>Certificate Issued</fullName>
            </value>
            <value>
                <fullName>Certificate Pending</fullName>
            </value>
            <value>
                <fullName>Certificate Re-Issued</fullName>
            </value>
            <value>
                <fullName>Current Student</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
            <value>
                <fullName>Enrolling</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Fee Pending</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>Graduating</fullName>
            </value>
            <value>
                <fullName>Inactive for Fee Payment</fullName>
            </value>
            <value>
                <fullName>Leave of Absence</fullName>
            </value>
            <value>
                <fullName>Not Graduating</fullName>
            </value>
            <value>
                <fullName>Outgoing exchange</fullName>
            </value>
            <value>
                <fullName>Passed</fullName>
            </value>
            <value>
                <fullName>Re-Registered</fullName>
            </value>
            <value>
                <fullName>Return and Replace</fullName>
            </value>
            <value>
                <fullName>Return and Retake</fullName>
            </value>
            <value>
                <fullName>Ready for Invoice</fullName>
            </value>
            <value>
                <fullName>Offer Accepted</fullName>
            </value>
            <value>
                <fullName>Deferral Accepted</fullName>
            </value>
            <value>
                <fullName>Incoming Exchange</fullName>
            </value>
            <value>
                <fullName>Commitment Fees Lapsed</fullName>
                <isActive>false</isActive>
                <label>Commitment Fees Lapsed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>