force-app/main/default/objects/ProgramEnrollment/fields/Transcript_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>Transcript_Dispatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transcript Dispatched</label>
    <type>Checkbox</type>
</CustomField>