force-app/main/default/objects/ProgramEnrollment/validationRules/Pre_Term_non_editable_for_AMPBA_for_ASA.validationRule-meta.xml
<ValidationRule>
    <fullName>Pre_Term_non_editable_for_AMPBA_for_ASA</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $UserRole.Name = &quot;ASA Senior Manager&quot;,
    Program.Program_Code__c = &quot;AMPBA&quot;,
    ISCHANGED(Pre_Term__c)
)</errorConditionFormula>
    <errorMessage>ASA Senior Manager Role Cannot Edit Pre Term of AMPBA Program</errorMessage>
</ValidationRule>