force-app/main/default/objects/ProgramEnrollment/validationRules/Prevent_Edit_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    ISCHANGED(Name)
)</errorConditionFormula>
    <errorMessage>YOU can not edit name</errorMessage>
</ValidationRule>