force-app/main/default/objects/ProgramEnrollment/listViews/All_ProgramEnrollments.listView-meta.xml
<ListView>
    <fullName>All_ProgramEnrollments</fullName>
    <columns>Name</columns>
    <columns>Program</columns>
    <columns>Academic_Term__c</columns>
    <columns>PGID__c</columns>
    <columns>Contact</columns>
    <columns>CreatedDate</columns>
    <columns>IsActive</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Program Enrollments</label>
    <sharedTo>
        <group>admin_Group</group>
    </sharedTo>
</ListView>