force-app/main/default/objects/ProgramEnrollment/listViews/My_Programs.listView-meta.xml
<ListView>
    <fullName>My_Programs</fullName>
    <columns>Program</columns>
    <columns>Academic_Term__c</columns>
    <columns>Academic_Year__c</columns>
    <columns>StartDate</columns>
    <columns>Status</columns>
    <columns>Name</columns>
    <columns>ApplicationDate</columns>
    <filterScope>Mine</filterScope>
    <label>My Programs</label>
    <sharedTo>
        <group>Students_Group</group>
    </sharedTo>
</ListView>