force-app/main/default/objects/ProgramEnrollment/listViews/PGPYL_Program_Enrollments.listView-meta.xml
<ListView>
    <fullName>PGPYL_Program_Enrollments</fullName>
    <columns>Name</columns>
    <columns>Program</columns>
    <columns>Academic_Term__c</columns>
    <columns>Account</columns>
    <columns>Contact</columns>
    <columns>Contact.Email</columns>
    <columns>IsActive</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Academic_Term__c</field>
        <operation>contains</operation>
        <value>PGP YL Co&apos;2025-27</value>
    </filters>
    <label>PGPYL Co&apos;2025-27 Program Enrollments</label>
</ListView>